--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -42,25 +42,139 @@
                         <div class="option1">
                             <label>Quantity:</label>
                             <div class="input-group">
-                                <button class="btn">-</button>
-                                <span class="value">1</span>
-                                <button class="btn2">+</button>
+                                <div class="gp1">
+                                    <button class="btn">-</button>
+                                    <span class="value">1</span>
+                                    <button class="btn2">+</button>
+                                </div>
                             </div>
                         </div>
                         <div class="option1">
                             <label>Sugar:</label>
                             <div class="input-group">
-                                <button class="btn">-</button>
-                                <span class="value">50%</span>
-                                <button class="btn">+</button>
+                                <div class="gp2">
+                                    <button class="btn1">-</button>
+                                    <span class="value">50%</span>
+                                    <button class="btn2">+</button>
+                                </div>
                             </div>
                         </div>
                         <div class="option1">
                             <label>Size:</label>
                             <div class="input-group">
-                                <button class="btn">-</button>
-                                <span class="value">L</span>
-                                <button class="btn2">+</button>
+                                <div class="gp3">
+                                    <button class="btn">-</button>
+                                    <span class="value">L</span>
+                                    <button class="btn2">+</button>
+                                </div>
+                            </div>
+                        </div>
+                        <p>$2.50</p>
+                        <button class="button-link cancel">Cancel</button>
+                    </div>
+                    <div class="cart">
+                        <img class="image-cart" src="../IMAGE/product/image-4.png">
+                        <p>Espresso</p>
+                        <div class="option1">
+                            <label>Quantity:</label>
+                            <div class="input-group">
+                                <div class="gp1">
+                                    <button class="btn">-</button>
+                                    <span class="value">1</span>
+                                    <button class="btn2">+</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="option1">
+                            <label>Sugar:</label>
+                            <div class="input-group">
+                                <div class="gp2">
+                                    <button class="btn1">-</button>
+                                    <span class="value">50%</span>
+                                    <button class="btn2">+</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="option1">
+                            <label>Size:</label>
+                            <div class="input-group">
+                                <div class="gp3">
+                                    <button class="btn">-</button>
+                                    <span class="value">L</span>
+                                    <button class="btn2">+</button>
+                                </div>
+                            </div>
+                        </div>
+                        <p>$2.50</p>
+                        <button class="button-link cancel">Cancel</button>
+                    </div>
+                    <div class="cart">
+                        <img class="image-cart1" src="../IMAGE/product/image-5.png">
+                        <p>Espresso</p>
+                        <div class="option1">
+                            <label>Quantity:</label>
+                            <div class="input-group">
+                                <div class="gp1">
+                                    <button class="btn">-</button>
+                                    <span class="value">1</span>
+                                    <button class="btn2">+</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="option1">
+                            <label>Sugar:</label>
+                            <div class="input-group">
+                                <div class="gp2">
+                                    <button class="btn1">-</button>
+                                    <span class="value">50%</span>
+                                    <button class="btn2">+</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="option1">
+                            <label>Size:</label>
+                            <div class="input-group">
+                                <div class="gp3">
+                                    <button class="btn">-</button>
+                                    <span class="value">L</span>
+                                    <button class="btn2">+</button>
+                                </div>
+                            </div>
+                        </div>
+                        <p>$2.50</p>
+                        <button class="button-link cancel">Cancel</button>
+                    </div>
+                    <div class="cart">
+                        <img class="image-cart1" src="../IMAGE/product/image-5.png">
+                        <p>Espresso</p>
+                        <div class="option1">
+                            <label>Quantity:</label>
+                            <div class="input-group">
+                                <div class="gp1">
+                                    <button class="btn">-</button>
+                                    <span class="value">1</span>
+                                    <button class="btn2">+</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="option1">
+                            <label>Sugar:</label>
+                            <div class="input-group">
+                                <div class="gp2">
+                                    <button class="btn1">-</button>
+                                    <span class="value">50%</span>
+                                    <button class="btn2">+</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="option1">
+                            <label>Size:</label>
+                            <div class="input-group">
+                                <div class="gp3">
+                                    <button class="btn">-</button>
+                                    <span class="value">L</span>
+                                    <button class="btn2">+</button>
+                                </div>
                             </div>
                         </div>
                         <p>$2.50</p>
@@ -70,27 +184,31 @@
             </div>
             <div class="right-main">
                 <h1>Order Summary</h1>
-                <p>Item: 4</p>
-                <imput>Enter your code here</imput>
-                <button class="button-link button">Apply</button>
-                <p>Total Cost: $9.00</p>
-                <button class="button-link button">Pay Now</button>
+                <p style="font-size: larger;">ITEM: 4</p>
+                <p style="font-weight: 600; font-size: larger;">PROMO CODE</p>
+                <input type="text" name="promocode" placeholder="Enter your code here">
+                <button class="button-link-button">Apply</button>
+                <div class="price">
+                    <p style="font-size: larger; font-weight: 500;">Total Cost:</p>
+                    <p style="font-size: larger; font-weight: 500;">9.00$</p>
+                </div>
+                <button class="button-link-button1">Pay Now</button>
             </div>  
         </div>
         <div class="bottom">
-            <div class="follow">Follow
-                <div>
+            <div class="follow">
+                <p>Follow Us</p>
+                <div class="fb">
                     <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M14 19H19V5H5V19H12V14H10V12H12V10.3458C12 9.00855 12.1392 8.52362 12.4007 8.03473C12.6622 7.54584 13.0458 7.16216 13.5347 6.9007C13.9174 6.69604 14.3922 6.57252 15.2217 6.51954C15.551 6.49851 15.9771 6.52533 16.5 6.6V8.5H16C15.0827 8.5 14.7042 8.54332 14.4779 8.66433C14.3376 8.73939 14.2394 8.83758 14.1643 8.97793C14.0433 9.20418 14 9.42853 14 10.3458V12H16.5L16 14H14V19ZM4 3H20C20.5523 3 21 3.44772 21 4V20C21 20.5523 20.5523 21 20 21H4C3.44772 21 3 20.5523 3 20V4C3 3.44772 3.44772 3 4 3Z"></path></svg>
                     <div>Facebook</div>
                 </div>
-                <div>
+                <div class="x">
                     <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M10.4883 14.651L15.25 21H22.25L14.3917 10.5223L20.9308 3H18.2808L13.1643 8.88578L8.75 3H1.75L9.26086 13.0145L2.31915 21H4.96917L10.4883 14.651ZM16.25 19L5.75 5H7.75L18.25 19H16.25Z"></path></svg>
                     <div>X</div>
                 </div>
-                
-                
             </div>
-            <div class="contact">Contact Us
+            <div class="contact">
+                <p>Contact Us</p>
                 <p>(+855) 12 222222</p>
                 <p>(+855) 16 816816</p>
             </div>
