--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -32,7 +32,7 @@
             <div class="left-main">
                 <div class="head-cart">
                     <h1>Cart</h1>
-                    <button class="button"><a class="button-link" href="./menu.html">New Order</a></button>
+                    <button class="button-link button"><a class="button-link" href="./menu.html">New Order</a></button>
                     <button class="button-link button">Previuos Order</button>
                 </div>
                 <div class="carts">
