--- a/HTML/menu.html
+++ b/HTML/menu.html
@@ -33,62 +33,61 @@
             <div class="text-overlay">
                 Discount 40% off
                 <br>on Espresso
-                <br><br><br>
                 <br>Try it out
             </div>
         </div>
         <div class="main">
             <div class="cart">
                 <div class="contain-product"><img class="product" src="../IMAGE/product/image-1.png"></div>
-                <p>Ice Americano</p>
+                <p class="name">Ice Americano</p>
                 <p id="price">$2.50</p>
                 <button class="order"><a class="button-link" href="./cart.html">Order Now</a></button>
             </div>
             <div class="cart">
                 <div class="contain-product"><img class="product" src="../IMAGE/product/image-2.png"></div>
-                <p>Frappucino</p>
+                <p class="name">Frappucino</p>
                 <p id="price">$2.50</p>
                 <button class="order"><a class="button-link" href="./cart.html">Order Now</a></button>
             </div>
             <div class="cart">
                 <div class="contain-product"><img class="product" src="../IMAGE/product/image-3.png"></div>
-                <p>Espresso</p>
+                <p class="name">Espresso</p>
                 <p id="price">$2.50</p>
                 <button class="order"><a class="button-link" href="./cart.html">Order Now</a></button>
             </div>
             <div class="cart">
                 <div class="contain-product"><img class="product" src="../IMAGE/product/image-4.png"></div>
-                <p>Cappucino</p>
+                <p class="name">Cappucino</p>
                 <p id="price">$2.50</p>
                 <button class="order"><a class="button-link" href="./cart.html">Order Now</a></button>
             </div>
             <div class="cart">
                 <div class="contain-product"><img class="product" src="../IMAGE/product/image-5.png"></div>
-                <p>Iced pumpkin latte</p>
+                <p class="name">Iced pumpkin latte</p>
                 <p id="price">$2.50</p>
                 <button class="order"><a class="button-link" href="./cart.html">Order Now</a></button>
             </div>
             <div class="cart">
                 <div class="contain-product"><img class="product" src="../IMAGE/product/image-6.png"></div>
-                <p>Iced Mocha</p>
+                <p class="name">Iced Mocha</p>
                 <p id="price">$2.50</p>
                 <button class="order"><a class="button-link" href="./cart.html">Order Now</a></button>
             </div>
             <div class="cart">
                 <div class="contain-product"><img class="product" src="../IMAGE/product/image-7.png"></div>
-                <p>Machhiato</p>
+                <p class="name">Machhiato</p>
                 <p id="price">$2.50</p>
                 <button class="order"><a class="button-link" href="./cart.html">Order Now</a></button>
             </div>
             <div class="cart">
                 <div class="contain-product"><img class="product" src="../IMAGE/product/image-8.png"></div>
-                <p>Iced Tea</p>
+                <p class="name">Iced Tea</p>
                 <p id="price">$2.50</p>
                 <button class="order"><a class="button-link" href="./cart.html">Order Now</a></button>
             </div>
             <div class="cart">
                 <div class="contain-product"><img class="product" src="../IMAGE/product/image-9.png"></div>
-                <p>Iced matcha latte</p>
+                <p class="name">Iced matcha latte</p>
                 <p id="price">$2.50</p>
                 <button class="order"><a class="button-link" href="./cart.html">Order Now</a></button>
             </div>
