--- a/HTML/our-story.html
+++ b/HTML/our-story.html
@@ -48,10 +48,10 @@
                 <div class="taste">
                     <h1 class="font-Italianno">Find your taste</h1>
                     <div class="taste-slider">
-                        <div class="slider" style="background-color: aqua;">
-                            <img class="image1 image" src="../IMAGE/product/image-4.png" alt="Image 1">
-                            <img class="image2 image" src="../IMAGE/product/image-5.png" alt="Image 2">
-                            <img class="image3 image" src="../IMAGE/product/image-6.png" alt="Image 3">
+                        <div class="slider">
+                            <img class="image1" src="../IMAGE/product/image-4.png" alt="Image 1">
+                            <img class="image2" src="../IMAGE/product/image-5.png" alt="Image 2">
+                            <img class="image3" src="../IMAGE/product/image-6.png" alt="Image 3">
                         </div>
                         </div>
                             <button class="prev" onclick="moveSlide(-1)"><i class="fa-solid fa-arrow-left"></i></button>
