--- a/HTML/our-story.html
+++ b/HTML/our-story.html
@@ -78,7 +78,7 @@
                 <div>
                     <h1 class="font-Italianno">Original Taste </h1>
                     <div id="origin">
-                        <div><img class="image" src="../IMAGE/product/image-2.png"></div>
+                        <div><img class="image" src="../IMAGE/product/image-2.png" height="300"></div>
                         <p>“Coffree's Original Cold Brew™ Iced Coffee is crafted daily using a unique cold-drip process that preserves the rich flavor and bold strength of the beans while delivering a coffee that's two-thirds”</p>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                 <div>
                     <h1 class="font-Italianno">Customer Favorite</h1>
                     <div class="favorite">
-                        <img class="image" src="../IMAGE/product/image-5.png">
+                        <img class="image" src="../IMAGE/product/image-5.png" height="300">
                         <p>Coffree's Iced pumpkin latte is a crowd favorite, combining our rich, smooth cold brew with the subtle sweetness of natural vanilla and a splash of creamy milk. It's the ideal balance of bold coffee flavor and indulgent smoothness, crafted to brighten your day with every sip.</p>
                     </div>
                 </div>
