--- a/HTML/home.html
+++ b/HTML/home.html
@@ -44,7 +44,7 @@
             <br>taste the besthandpicked coffee beans from
             <br>South America make it into unique coffee drinks.
             </p>
-            <button><b>Try Out</b></button>
+            <a href="./menu.html" style="text-decoration: none; color: white;"><button><b>Try Out</b></button></a>
             <div></div>
         </div>
         <div class="bottom">
