--- a/HTML/our-story.html
+++ b/HTML/our-story.html
@@ -10,15 +10,27 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1 class="brand" class="font-Italianno">The Coffree</h1>
-            <div class="menu">
-                <a href="./home.html">Home</a>
-                <a href="./menu.html">Menu</a>
-                <a href="./location.html">Location</a>
-                <div class="about">
-                    <p class="chose about-chose">Our Story</p>
-                    <div class="about-content">
-                        <a href="./our-story.html">Our Story</a>
+            <h1 class="brand">The Coffree</h1>
+            <div class="box-menu">
+                <div class="menu">
+                    <a href="./home.html">Home</a>
+                    <a href="./menu.html">Menu</a>
+                    <a href="./location.html">Location</a>
+                    <div class="about">
+                        <p class="chose about-chose">Our Story</p>
+                        <div class="about-content">
+                            <a href="./our-story.html">Our Story</a>
+                            <a href="./mobile-app.html">Mobile App</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="logo-menu">
+                    <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z"></path></svg>
+                    <div class="menu-slide">
+                        <a href="./home.html">Home</a>
+                        <a href="./menu.html">Menu</a>
+                        <a href="./location.html">Location</a>
+                        <a class="chose" href="./our-story.html">Our Story</a>
                         <a href="./mobile-app.html">Mobile App</a>
                     </div>
                 </div>
