--- a/HTML/home.html
+++ b/HTML/home.html
@@ -10,13 +10,25 @@
     <div class="container">
         <div class="header">
             <h1 class="brand">The Coffree</h1>
-            <div class="menu">
-                <a class="chose" href="./home.html">Home</a>
-                <a href="./menu.html">Menu</a>
-                <a href="./location.html">Location</a>
-                <div class="about">
-                    <p class="about-chose">About</p>
-                    <div class="about-content">
+            <div class="box-menu">
+                <div class="menu">
+                    <a class="chose" href="./home.html">Home</a>
+                    <a href="./menu.html">Menu</a>
+                    <a href="./location.html">Location</a>
+                    <div class="about">
+                        <p class="about-chose">About</p>
+                        <div class="about-content">
+                            <a href="./our-story.html">Our Story</a>
+                            <a href="./mobile-app.html">Mobile App</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="logo-menu">
+                    <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z"></path></svg>
+                    <div class="menu-slide">
+                        <a class="chose" href="./home.html">Home</a>
+                        <a href="./menu.html">Menu</a>
+                        <a href="./location.html">Location</a>
                         <a href="./our-story.html">Our Story</a>
                         <a href="./mobile-app.html">Mobile App</a>
                     </div>
@@ -33,22 +45,24 @@
             <br>The Coffree</h1>
             <div class="head-main">
                 <p>We use coffee beans from South America</p>
-                <img class="logo" src="../IMAGE/logo/Ellipse.png">
+                <img class="logo-small" src="../IMAGE/logo/Ellipse.png">
                 <p>Roasted with love</p>
             </div>
-            <p>Welcome to our coffee shop website, we sells
-            <br>many various types of coffee and tea,and our
-            <br>brand name of the shop is. We are passionate
-            <br>about coffee and the art of perfect brewing.
-            <br>So, we make sure that our customers get to
-            <br>taste the besthandpicked coffee beans from
-            <br>South America make it into unique coffee drinks.
+            <p class="main-content">
+            Welcome to our coffee shop website, we sells
+            many various types of coffee and tea,and our
+            brand name of the shop is. We are passionate
+            about coffee and the art of perfect brewing.
+            So, we make sure that our customers get to
+            taste the besthandpicked coffee beans from
+            South America make it into unique coffee drinks.
             </p>
-            <button><b>Try Out</b></button>
+            <button><a class="button-link" href="./menu.html">Try Out</a></button>
             <div></div>
         </div>
         <div class="bottom">
-            <div class="follow">Follow
+            <div class="follow">
+                Follow
                 <div>
                     <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M14 19H19V5H5V19H12V14H10V12H12V10.3458C12 9.00855 12.1392 8.52362 12.4007 8.03473C12.6622 7.54584 13.0458 7.16216 13.5347 6.9007C13.9174 6.69604 14.3922 6.57252 15.2217 6.51954C15.551 6.49851 15.9771 6.52533 16.5 6.6V8.5H16C15.0827 8.5 14.7042 8.54332 14.4779 8.66433C14.3376 8.73939 14.2394 8.83758 14.1643 8.97793C14.0433 9.20418 14 9.42853 14 10.3458V12H16.5L16 14H14V19ZM4 3H20C20.5523 3 21 3.44772 21 4V20C21 20.5523 20.5523 21 20 21H4C3.44772 21 3 20.5523 3 20V4C3 3.44772 3.44772 3 4 3Z"></path></svg>
                     <div>Facebook</div>
@@ -58,7 +72,8 @@
                     <div>X</div>
                 </div>
             </div>
-            <div class="contact">Contact Us
+            <div class="contact">
+                Contact Us
                 <p>(+855) 12 222222</p>
                 <p>(+855) 16 816816</p>
             </div>
