--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -12,7 +12,7 @@
             <h1 class="brand">The Coffree</h1>
             <div class="box-menu">
                 <div class="menu">
-                    <a class="chose" href="./home.html">Home</a>
+                    <a href="./home.html">Home</a>
                     <a href="./menu.html">Menu</a>
                     <a href="./location.html">Location</a>
                     <div class="about">
@@ -26,7 +26,7 @@
                 <div class="logo-menu">
                     <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z"></path></svg>
                     <div class="menu-slide">
-                        <a class="chose" href="./home.html">Home</a>
+                        <a href="./home.html">Home</a>
                         <a href="./menu.html">Menu</a>
                         <a href="./location.html">Location</a>
                         <a href="./our-story.html">Our Story</a>
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="head-left">
-                <a href="./cart.html"><img class="logo" src="../IMAGE/logo/Shopping-cart.png"></a>
+                <a class="chose" href="./cart.html"><img class="logo" src="../IMAGE/logo/Shopping-cart.png"></a>
                 <a href="./profile.html"><img class="logo" src="../IMAGE/logo/User-Profile.png"></a>
                 <button class="sign-in"><a class="button-link" href="./profile.html">Sign In</a></button>
             </div>
@@ -253,7 +253,7 @@
                 <button class="button-link-button">Apply</button>
                 <div class="price">
                     <p style="font-size: larger; font-weight: 500;">Total Cost:</p>
-                    <p style="font-size: larger; font-weight: 500;">9.00$</p>
+                    <p style="font-size: larger; font-weight: 500;">10.00$</p>
                 </div>
                 <button class="button-link-button1">Pay Now</button>
             </div>  
